--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <resources>
-  <color name="splashscreen_background">#FDF8F6</color>
+  <color name="splashscreen_background">#fff7f5</color>
   <color name="iconBackground">#FFFFFF</color>
   <color name="colorPrimary">#023c69</color>
-  <color name="colorPrimaryDark">#FDF8F6</color>
+  <color name="colorPrimaryDark">#fff7f5</color>
 </resources>
