--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -5,9 +5,5 @@
     <item name="colorPrimary">@color/colorPrimary</item>
     <item name="android:statusBarColor">#FDF8F6</item>
   </style>
-  <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
-    <item name="windowSplashScreenBackground">@color/splashscreen_background</item>
-    <item name="windowSplashScreenAnimatedIcon">@drawable/splashscreen_logo</item>
-    <item name="postSplashScreenTheme">@style/AppTheme</item>
-  </style>
+  <!-- Splash screen theme removed - using custom fade component instead -->
 </resources>
